minor link change

--- a/website_example/index.html
+++ b/website_example/index.html
@@ -23,7 +23,7 @@
 
     <!-- Navigation -->
     <div class="nav-side-menu">
-        <div class="brand"><a href="/"> <img src="../DYNGE/img/logodyngecoin.png" alt="Dyngepeng" class="img-responsive">
+        <div class="brand"><a href="/"> <img src="../img/logodyngecoin.png" alt="Dyngepeng" class="img-responsive">
             <span id="coinSymbol"></span> <span tkey="miningPool">Dyngecoin Mining Pool</span></a></div>
         <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>  
         <div class="menu-list">
